# FlowerSimulations

FlowerSimulations/FlowerAveraging/: README.md  client_1.py  client_2.py  client_3.py  server.py
FlowerSimulations/FlowerHorizontal/: client_1.py  client_2.py  client_3.py  pyproject.toml  test_client.py
FlowerSimulations/FlowerHorizontal/data/: data_1.csv  data_2.csv  data_3.csv
FlowerSimulations/FlowerNumbers/: client_1.py  client_2.py  client_3.py  server.py
FlowerSimulations/FlowerVertical/: README.md  client_1.py  client_2.py  client_3.py  server.py
SecureFlowerSimulations/: README.md  testing.ipynb
SecureFlowerSimulations/1-FlowerNumbers/: README.md  client_H_1.py  client_H_2.py  client_V.py  server.py
SecureFlowerSimulations/2-FlowerNumbers_alt_rounds/: README.md  client_H_1.py  client_H_2.py  client_V.py  server.py
SecureFlowerSimulations/3-FlowerVFL_without_Encr/: README.md  client_H_2.py  client_V.py  server.py
SecureFlowerSimulations/4-FlowerCFL_VOutFed_without_Encr/: README.md  client_H_1.py  client_V.py  server.py
SecureFlowerSimulations/5-FlowerCFL_HOutFed_without_Encr/: README.md  client_H_1.py  client_H_2.py  client_V.py  server.py
SecureFlowerSimulations/6-FlowerVFL_with_Encr/: README.md  client_H_1.py  client_H_2.py  client_V.py  generate_key_masks.ipynb  server.py
SecureFlowerSimulations/7-FlowerCFL_VOutFed_with_Encr/: README.md  client_H_1.py  client_H_2.py  client_V.py  generate_key_masks.ipynb  server.py
SecureFlowerSimulations/8-FlowerCFL_HOutFed_with_Encr/: README.md  client_H_1.py  client_H_2.py  client_V.py  server.py  (+1 more)
(+131 files in other folders)
